<resources>
    <string name="app_name">FindARoom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="input_phone_number">Nhập số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="or">Hoặc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Đăng nhập</string>
    <string name="title_home_hello">Xin chào!</string>
    <string name="content_home_hello">Hãy cùng chúng tôi tìm 1 nhà trọ thật là ưng ý.</string>
    <string name="titleSearch_homeFragment">Tìm kiếm</string>
    <string name="title_home_trend">Tin nổi bật</string>
    <string name="title_home_for_you">Dành cho bạn</string>
    <string name="count_view">Lượt xem</string>
    <string name="count_feedback">Đánh giá</string>
    <string name="Utility">Tiện ích</string>
    <string name="Information">Thông tin</string>
    <string name="Information_room">Thông tin phòng</string>
    <string name="Position">Vị trí</string>
    <string name="content_text_detail">Cho thuê phòng trọ giá rẻ ở  Bắc Từ Liêm, Hà Nội</string>
    <string name="api_key_app">AIzaSyDId5Ne9ty3PAl9aMBW4A-_7WcXfH7ngFA</string>
    <string name="more_content">Mô tả thêm</string>
    <string name="rankandfeedback">Xếp hạng và đánh giá</string>
    <string name="message">Nhắn tin</string>
    <string name="call">Liên hệ</string>
    <array name="spTP">
        <item>Chọn tỉnh/thành phố</item>
    </array>
    <array name="spQH">
        <item>Chọn quận/huyện</item>
    </array>

    <array name="spXP">
        <item>Chọn xã/phường</item>
    </array>
    <array name="spDP">
        <item>
            Chọn đường/phố
        </item>
    </array>

    <string name="step1">1. Sử dụng hình ảnh trước và sau <b>(Before After)</b> thường được sử dụng nhiều trong ngành làm đẹp. <b>FindARoom</b> cho rằng đây là những hình ảnh <b>đả kích</b> vào vấn đề cá nhận, <b>bôi nhọ danh dự</b> nên gần như <b>đều bị cấm</b></string>
    <string name="step2">2. Bạn không được phép chạy quảng cáo với những hình ảnh <b>đồi truỵ, 18+</b>. Hầu như nhà mạng quảng cáo nào cũng cầm nhưng hình ảnh này cả</string>
    <string name="step3">3. FindARoom không cho phép bạn được đăng bài với nội dung liên quan đến các <b>thương hiệu lớn</b>.</string>
    <string name="step4">4. Bên trên là bản quyền về sản phẩm, còn phần này mình sẽ nói về bản quyền <b>hình ảnh người nổi tiếng</b> như ca sĩ, diễn viên, vận động viên,…</string>
    <string name="step5">5. Nội dung bài viết chứa những từ ngữ <b>phản cảm</b></string>
    <string name="step6">6. FindARoom sẽ không cho phép bạn đăng bài với những hình ảnh có <b>súng đạn</b> hoặc yếu tố <b>bạo lực</b> như máu me ...</string>
    <string name="step7">7. Các yếu tố phân biệt đối xử như <b>giới tính độ tuổi</b>....</string>
    <string name="step8">8. Không chứa nhưng từ ngữ cam kết ví dụ như : <b>chắc chắn sẽ đẹp</b> hay <b>xem phòng ngay để được ưu đãi</b></string>
    <string name="step9">9. Không hình ảnh <b>máu me</b>, <b>gây sốc</b> , chứa yếu tố <b>bạo lực</b></string>
    <string name="step10">10. FindARoom cực kì làm gắt đối với các sản phẩm về <b>thuốc lá, thuốc lá điện tử</b></string>
    <string name="text1">Tất cả các bài viết vi phạm sẽ bị chúng tôi <b>gỡ xuống</b>. Nặng hơn có thể bị <b>cấm</b> tài khoản vĩnh viễn</string>

    <string name="policy"><u>Chính sách của chúng tôi</u></string>
</resources>